"This is a master update of the full paper draft; all sections which are deprecated/have editing notes which have been addressed were removed; all notes and 'straggler' files which are no longer relevant also removed."

--- a/nate-am-review/APR.bib
+++ b/nate-am-review/APR.bib
@@ -1,12 +1,103 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Nathan Scott David Forrest Everrett Johnson at 2019-02-19 10:01:32 -0700 
+%% Created for Nathan Scott David Forrest Everrett Johnson at 2019-02-25 16:37:51 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Ghiringhelli2015,
+	Author = {Luca M. Ghiringhelli and Jan Vybiral and Sergey V. Levechenko and Claudia Draxl and Matthias Scheffler},
+	Date-Added = {2019-02-25 14:33:30 -0700},
+	Date-Modified = {2019-02-25 14:34:37 -0700},
+	Journal = {Physical Review Letters},
+	Month = {March},
+	Number = {105503},
+	Title = {Big Data of Materials Science: Critical Role of the Descriptor},
+	Volume = {114},
+	Year = {2015}}
+
+@article{Gubernatis2018,
+	Author = {J.E. Gubernatis and T. Lookman},
+	Date-Added = {2019-02-25 14:26:55 -0700},
+	Date-Modified = {2019-02-25 14:28:25 -0700},
+	Journal = {Physical Review Materials },
+	Month = {December},
+	Number = {120301},
+	Title = {Machine learning in materials design and discovery: Examples from the present and suggestions for the future},
+	Volume = {2},
+	Year = {2018}}
+
+@article{Hachmann2011,
+	Author = {Johannes Hachmann and Roberto Olivares-Amaya and Sule Atahan-Evrenk and Carlos Amador-Bedolla and Roel S. S\'anchez-Carrera and Aryeh Gold-Parker and Leslie Vogt and Anna M. Brockway and Al\'an Aspuru-Guzik},
+	Date-Added = {2019-02-25 14:16:50 -0700},
+	Date-Modified = {2019-02-25 14:18:41 -0700},
+	Journal = {Journal of Physical Chemistry Letters},
+	Title = {The Harvard Clean Energy Project: Large-Scale Computational Screening and Design of Organic Photovoltaics on the World Community Grid},
+	Volume = {2},
+	Year = {2011}}
+
+@article{Wilkinson2016,
+	Author = {Mark D. Wilkinson and Michel Dumontier and IJsbrand Jan Aalbersberg and Gabrielle Appleton and Myles Axton and Arie Baak and Niklas Blomber and Jan-Willem Boiten and Luiz Bonino da Silva Santos and Philip E. Bourne and Jildau Bouwman and Anthony J. Brookes and Tim Clark and Merc\'e Crosas and Ingrid Dillo and Olivier Dumon and Scott Edmunds and Chris T. Evelo and Richard Finkers and Alejandra Gonzalez-Beltran and Alasdair J.G. Gray and Paul Groth and Carole Goble and Jeffrey S. Grethe and Jaap Heringa and Peter A.C. 't Hoen and Rob Hooft and Tobias Kuhn and Ruben Kok and Joost Kok and Scott J. Lusher and Maryann E. Martone and Albert Mons and Abel L. Packer and Bengt Persson and Philippe Rocca-Serra and Marco Roos and Rene van Schaik and Susanna-Assunta Sansone and Erik Schultes and Thierry Sengstag and Ted Slater and George Strawn and Morris A. Swertz and Mark Thompson and Johan van der Lei and Erik van Mulligen and Jan Velterop and Andra Waagmeester and Peter Wittenburg and Katherine Wolstencroft and Jun Zhao and Barend Mons},
+	Date-Added = {2019-02-25 11:22:22 -0700},
+	Date-Modified = {2019-02-25 11:26:32 -0700},
+	Journal = {Scientific Data},
+	Month = {March},
+	Number = {160018},
+	Title = {Comment: The FAIR Guiding Princples for scientific data management and stewardship},
+	Volume = {3},
+	Year = {2016}}
+
+@article{Saal2013,
+	Author = {James E. Saal and Scott Kirklina nd Murathan Aykol and Bryce MEredig and Chris Wolverton},
+	Date-Added = {2019-02-25 11:10:16 -0700},
+	Date-Modified = {2019-02-25 11:11:43 -0700},
+	Journal = {JOM},
+	Month = {September},
+	Number = {11},
+	Title = {Materials Design and Discovery with High-Throughput Density Functional Theory: The Open Quantum Materials Database (OQMD)},
+	Volume = {65},
+	Year = {2013}}
+
+@article{Bulgarevich2018,
+	Author = {Dmitry S. Bulgarevich and Susumu Tsukamoto and Tadashi Kasuya and Masahiko Demura and Makoto Watanabe},
+	Date-Added = {2019-02-25 09:47:36 -0700},
+	Date-Modified = {2019-02-25 09:48:50 -0700},
+	Journal = {Scientific Reports},
+	Month = {November},
+	Number = {2078},
+	Pages = {1-8},
+	Title = {Pattern recognition with machine learning on optical microscopy images of typical metallurgical microstructures},
+	Volume = {8},
+	Year = {2018}}
+
+@article{Miyazaki2019,
+	Author = {Shiho Miyazaki and Masahiro Kusano and Dmitry S. Bulgarevich and Satoshi Kishimoto and Atsushi Yumoto and Makoto Watanabe},
+	Date-Added = {2019-02-25 09:41:22 -0700},
+	Date-Modified = {2019-02-25 09:42:47 -0700},
+	Journal = {Materials Transactions},
+	Month = {February},
+	Title = {Image Segmentation and Analysis for Microstructure and Property Evaluations on Ti-6Al-4V Fabricated by Selective Laser Melting},
+	Year = {2019}}
+
+@webpage{VisionScience,
+	Date-Added = {2019-02-23 15:02:29 -0700},
+	Date-Modified = {2019-02-23 15:02:47 -0700},
+	Lastchecked = {02/23/2019},
+	Url = {http://www.visionscience.com/vsImages.html},
+	Bdsk-Url-1 = {http://www.visionscience.com/vsImages.html}}
+
+@webpage{CVonline,
+	Date-Added = {2019-02-23 14:53:25 -0700},
+	Date-Modified = {2019-02-23 14:54:04 -0700},
+	Keywords = {computer vision, in situ monitoring, databases},
+	Lastchecked = {02/23/2019},
+	Month = {February},
+	Url = {homepages.inf.ed.ac.uk/rbf/CVonline},
+	Year = {2019},
+	Bdsk-Url-1 = {homepages.inf.ed.ac.uk/rbf/CVonline}}
 
 @article{Homer2019,
 	Author = {Eric R. Homer},
@@ -290,13 +381,6 @@
 	Volume = {3},
 	Year = {2016}}
 
-@article{Ouyang2017,
-	Author = {Runhai Ouyang and Stefano Curtarolo and Emre Ahmetcik and Matthias Scheffler and Luca M. Ghiringhelli},
-	Date-Added = {2018-12-19 17:08:00 -0700},
-	Date-Modified = {2018-12-19 17:08:49 -0700},
-	Journal = {arXiv PrePrint},
-	Title = {SISSO: a compressed sensing method for systematically identifying efficient physical models of materials properties}}
-
 @article{Nie2014,
 	Author = {Pulin Nie and O.A. Ojo and Zhuguo Li},
 	Date-Added = {2018-12-19 16:51:46 -0700},
@@ -435,8 +519,8 @@
 @article{Gopakumar2018,
 	Author = {Gopakumar, Abhijith M and Balachandran, Prasanna V and Xue, Dezhen and Gubernatis, James E and Lookman, Turab},
 	Date-Added = {2018-12-19 13:11:18 -0700},
-	Date-Modified = {2018-12-19 13:12:23 -0700},
-	Journal = {Nature Scientifi Reports},
+	Date-Modified = {2019-02-25 12:57:25 -0700},
+	Journal = {Nature Scientific Reports},
 	Month = {February},
 	Title = {Multi-objective Optimization for Materials Discovery via Adaptive Design},
 	Volume = {8},
@@ -1468,16 +1552,6 @@
 	Volume = {1},
 	Year = {1986}}
 
-@article{Ghiringhelli2015,
-	Author = {Kyca N, Ghiringhelli and Jan Vybiral and Sergey V. Levechenko and Claudia Draxl and Matthias Scheffler},
-	Date-Added = {2017-08-11 02:33:10 +0000},
-	Date-Modified = {2018-12-19 12:51:52 -0700},
-	Journal = {arXiv},
-	Keywords = {machine learning, theory, physics, crystal structure, crystal structure prediction, inverse design},
-	Month = {February},
-	Title = {Big Data of Materials Science - Critical Role of the Descriptor},
-	Year = {2015}}
-
 @article{Strano2013,
 	Author = {Giovanni Strano and Liang Hao and Richard M. Everson and Kenneth E. Evans},
 	Date-Added = {2017-08-10 21:19:38 +0000},
@@ -2239,7 +2313,7 @@
 
 @article{Morgan2005,
 	Author = {Morgan, Dane and Ceder, Gerbrand and Curtarolo, Stefano},
-	Date-Modified = {2018-12-19 16:38:32 -0700},
+	Date-Modified = {2019-02-25 13:07:36 -0700},
 	Doi = {10.1088/0957-0233/16/1/039},
 	File = {:Users/njohnson/Documents/Articles/Applied Physics Review/Morgan{\_}High-throughput and data mining withab initiomethods.pdf:pdf},
 	Issn = {0957-0233},
@@ -2247,7 +2321,7 @@
 	Keywords = {stable crystal structure, crystal prediction, DFT, data mining, high throughput, ab initio},
 	Number = {1},
 	Pages = {296--301},
-	Title = {{High-throughput and data mining with {\textless}i{\textgreater}ab initio{\textless}/i{\textgreater} methods}},
+	Title = {{High-throughput and data mining with ab initio methods}},
 	Url = {http://stacks.iop.org/0957-0233/16/i=1/a=039?key=crossref.6918a29685f9638f1c0faf53146459aa},
 	Volume = {16},
 	Year = {2005},
@@ -2401,17 +2475,6 @@
 	Year = {2015},
 	Bdsk-Url-1 = {http://aip.scitation.org/doi/10.1063/1.4937809},
 	Bdsk-Url-2 = {http://dx.doi.org/10.1063/1.4937809}}
-
-@article{Vellido2012,
-	Abstract = {Peer Reviewed},
-	Author = {Vellido, Alfredo and Martin-Guerroro, J D and Lisboa, P},
-	File = {:Users/njohnson/Documents/Articles/Applied Physics Review/Vellido{\_}Making machine learning models interpretable.pdf:pdf},
-	Isbn = {9782874190490},
-	Journal = {20th European Symposium on Artificial Neural Networks, Computational Intelligence and Machine Learning (ESANN)},
-	Number = {April},
-	Pages = {163--172},
-	Title = {{Making machine learning models interpretable}},
-	Year = {2012}}
 
 @article{Frazier2014,
 	Abstract = {This paper reviews the state-of-the-art of an important, rapidly emerging, manufacturing technology that is alternatively called additive manufacturing (AM), direct digital manufacturing, free form fabrication, or 3D printing, etc. A broad contextual overview of metallic AM is provided. AM has the potential to revo- lutionize the global parts manufacturing and logistics landscape. It enables distributed manufacturing and the productions of parts-on-demand while offering the potential to reduce cost, energy consumption, and carbon footprint. This paper explores the material science, processes, and business consideration associated with achieving these performance gains. It is concluded that a paradigm shift is required in order to fully exploit AM potential.},
@@ -2865,11 +2928,3 @@
 	Title = {{Zeolite synthesis modelling with support vector machines: A combinatorial approach}},
 	Volume = {10},
 	Year = {2007}}
-
-@article{Wilkinson2016,
-	Author = {Wilkinson, Mark D and Dumontier, Michel and Aalbersberg, IJsbrand Jan and Appleton, Gabrielle and Axton, Myles and Baak, Arie and Blomberg, Niklas and Boiten, Jan-Willem and da Silva Santos, Luiz Bonino and Bourne, Philip E and others},
-	Journal = {Scientific data},
-	Publisher = {Nature Publishing Group},
-	Title = {The FAIR Guiding Principles for scientific data management and stewardship},
-	Volume = {3},
-	Year = {2016}}
