--- a/nate-am-review/SectionIII/Featurization.tex
+++ b/nate-am-review/SectionIII/Featurization.tex
@@ -1,4 +1,6 @@
 \subsubsection{Featurization of Qualitative Image Data}
+
+\textbf{New article by Miyazaki et al. on segmentation of SLM Ti-6Al-4V; they are able to segment out the alpha and beta phases, characterize fractions, etc. \cite{Miyazaki2019}. Also you can cite Bulgarevich \cite{Bulgarevich2018} but you don't need to go in-depth on his paper, lump it in with the DeCost stuff.}
 The use of images in studying additive manufacturing is widespread, common throughout all aspects of the manufacturing process, and provides key information about material properties and processing. As with all aspects of AM, the sheer size of image data to be analyzed is profound due to the large design space of AM. The types of information taken from images includes grain characteristics, like size, orientation, and phase, and defect characteristics, like pore size or crack length. When characterizing all of these features for all possible processing conditions and alloys the size of the problem grows quickly.
 
 Computer vision algorithms have been tested for automation of materials science image classification and analysis. Using these algorithms can speed up the experimental characterization process of AM. Furthermore, computer vision techniques can quantify information which may have otherwise only been used qualitatively or measured by approximation. 
