--- a/nate-am-review/SectionIII/SurrogateModeling.tex
+++ b/nate-am-review/SectionIII/SurrogateModeling.tex
@@ -1,11 +1,11 @@
 \subsubsection{Surrogate Modeling}
-Dimensionally reduced models are useful for engineering applications where few properties are being studied at a time, or when computational burden hinders development time considerably. Full-physics modeling is quite necessary to understand how physics at different scales interact to impact the AM process. Full physics models, however, can be expensive and time consuming to run. Phenomenon which are difficult to study experimentally, such as flow within the melt pool, are best studied through modeling approaches. If a model's computational expense is \textit{too} high then performing simulations at all relevant manufacturing conditions can be impossible. Machine learning algorithms can use the results of previously run high fidelity simulations to fill in the gaps and reduce development time.
+Dimensionally reduced models are useful for studies that target specific phenomenon or properties. They are particularly useful for optimization. Modeling correlations between physical processes and the dynamics of AM is necessary to build better process-structure and process-property models. Phenomenon which are difficult to study experimentally, such as flow within the melt pool, are best studied through modeling approaches. Though expensive, full-physics modeling is quite necessary to understand how physics at different scales interact to impact the AM process. Full physics models, however, can be expensive and time consuming to run.  If a model's computational expense is \textit{too} high then performing simulations at all relevant manufacturing conditions can be impossible. Machine learning algorithms can use the results of previously run high fidelity simulations to fill in the gaps and reduce development time.
 
-A \textit{surrogate model} is a mathematical approximation that predicts the results of AM simulations without actually performing the computation. Surrogate models preclude the need for running computationally expensive simulations for every possible manufacturing condition. The results of previous data-intensive simulations can be used in regression models to predict the results a simulation \textit{would have} given, if it had actually been performed. Surrogate models can be as simple as linear regression between simulation inputs and results, but are often more complex. The accuracy of a surrogate model is dependent upon how many previous simulations have been run and at how many different points in the design space.
+A \textit{surrogate model} is a regression model that interpolates the results of high-cost simulations. Surrogate models are regressed on the inputs and results of previously run simulations. Then, the surrogate model interpolates simulation results at new coordinates the design space. Surrogate models preclude the need for running computationally expensive simulations for every possible manufacturing condition. Surrogates can be as simple as linear regression between simulation inputs and results, but are often more complex. The accuracy of a surrogate model is dependent upon how many previous simulations have been run and at how many different points in the design space.
 
 Tapia et al. built a surrogate model for laser powder bed fusion of 316L stainless steel. They were concerned with predicting the melt pool depth of single-track prints solely from the laser power, velocity, and spot size \cite{Tapia2017}. The dataset used to build the surrogate was computationally derived, based on previous simulation methods used by the same research team \cite{King2014}. In particular, they used the results from a computationally expensive but high-accuracy melt pool flow model of Khairallah et al. \cite{Khairallah2016}. They ran powder bed simulations at various laser powers, velocities, and spot sizes, and the model told them the depth of the melt pool, among other information. The datasets provided enough information for a surrogate model to be trained to predict simulation results.
 
-To build this model, Tapia et al. used a machine learning model known as a Gaussian process model (GPM). A common model assumption in Gaussian process modeling is
+To build surrogate model, Tapia et al. used a machine learning model known as a Gaussian process model (GPM). A common model assumption in Gaussian process modeling is
 \begin{equation}
 	z(\mathbf{x}) = y(\mathbf{x}) + \epsilon(\mathbf{x})
 	\label{model}
@@ -20,9 +20,11 @@ Another benefit of GPM is that it aids in inverse design and design space visual
 
 Another approach to full scale models in AM is building high-fidelity models from an ensemble of low-fidelity models. Current integrated computational models link phenomena across spatiotemporal scales by running many single-physics models and passing the results from model to model, then comparing with experimental results. An example is the model of Martukanitz et al. that considered the thermal, mechanical, and material response of Ti-6Al-4V alloys manufactured with powder bed processes \cite{Martukanitz2014}. Martukanitz's model uses the finite element method to model the thermal and mechanical response based on classical continuum heat transfer equations. At the same time, the Calculation of Phase Diagrams (CALPHAD) method modeled the thermodynamics and mass transfer for each chemical species, while Diffusion-Controlled phase Transformations (DICTRA) is used to model phase formation. As noted by Martukanitz, this approach becomes computationally infeasible as the number of deposition layers increases.
 
-Even a \textit{single} modeling method -- just FEA, phase field, CALPHAD, etc -- becomes computationally expensive for thousands of layers of material deposition. Based on this scaling, accurately modeling the physics of a full build seems impossible, at least without a major leap in computing power. A machine learning method known as \textit{committee voting} or \textit{ensemble modeling} may provide a workaround. These methods rely on sampling many individual models to predict the behavior of a larger class of physics.
+Even a \textit{single} modeling method -- just FEA, phase field, CALPHAD, etc -- becomes computationally expensive for thousands of layers of material deposition. Based on this scaling, accurately modeling the physics of a full build seems prohibitive, at least without a major leap in computing power. A machine learning method known as \textit{committee voting} or \textit{ensemble modeling} may provide a workaround. These methods rely on sampling many individual models to predict the behavior of a larger class of physics.
 
-In traditional ensemble modeling approaches, many different regression models are trained to model a relationship $y = f(\mathbf{x})$, as in regression trees. For a given input $\mathbf{x_1}$ all regression models are assessed and various outputs predicted, $f_1(\mathbf{x}), f_2(\mathbf{x}), ..., f_n(\mathbf{x})$, etc. In AM it may make more sense to use data from single-scale AM models as the base models and train a machine learning based regression model from those. These data sets for additive may be the inputs and solutions of a solidification or heat transfer model, or experimentally obtained relationships.
+In traditional ensemble modeling approaches, many different regression models are trained to model a relationship $y = f(\mathbf{x})$, as in regression trees. For a given input $\mathbf{x_1}$ all regression models are assessed and various outputs predicted, $f_1(\mathbf{x}), f_2(\mathbf{x}), ..., f_n(\mathbf{x})$, etc. Each model $f_i(\mathbf{x})$ is a different type of machine learning regression model. Different types of regression approaches are robust for different trends in data sets. The individual regression models could be a random forest, support vector machine, neural network, or any of the type of regression models discussed herein. A linear combination of these models can have a higher prediction accuracy than any individual model.
+
+In AM, the same concept can be extended to datasets sampled from different physical models, instead of an ensemble of different regression models. Each model $f_i(\mathbf{x}_j)$ can be trained on the inputs and outputs of the $j$th simulation. These data sets for additive may be the inputs and solutions of a solidification or heat transfer model, for example, or experimentally obtained relationships.
 
 Ensemble modeling can be used in AM to solve multiobjective optimization problems, such as optimizing the heat transfer through a build and the grain growth simultaneously. Doing so would require training an ensemble model of simulations. The simulations to include could be thermomechanical models of heat transfer, phase field models of grain growth, finite element models of laser absorption, and so forth. The final ensemble model would take the form
 \begin{equation}
@@ -33,7 +35,7 @@ where $\mathbf{y}$ is a response vector of properties to optimize, $f_i(\mathbf{
 
 In the AM case, where information from models may overlap, this type of approach can screen out noise from simulations or experiments to gauge a more fundamental relationship. The uncertainties associated with a model can be weighted by the experimentally observed data points. Furthermore, predictions can be made across many different physical models, resulting in a predictive method for holistic analysis of the final properties. This method does not provide a picture of how the physics in each simulation interact or disagree. However, it can be used to simultaneously optimize the results of many different simulations and point toward desirable manufacturing conditions. A review of multiobjective optimization functions can be found at \cite{Jin2008}.
 
-Meredig et al. applied this method to the prediction of ABC ternary compounds, where A, B, and C each represent an element. \cite{Meredig2014}. The space of all combinations of A, B, and C elements is large and would require many, many simulations. Instead of running high-throughput DFT for all possibilities they used lower order simulations. Meredig ran DFT calculations for AB, AC, and BC compounds to generate a database of information. Then, regression trees were trained from the inputs of each binary alloy simulation to predict the formation energy. Finally, an ensemble model was trained
+Meredig et al. applied this method to the prediction of ABC ternary compounds, where A, B, and C each represent an element \cite{Meredig2014}. The space of all combinations of A, B, and C elements is large and would require many, many simulations. Instead of running high-throughput DFT for all possibilities they ran calculations for AB, AC, and BC compounds to generate a database of information. Then, regression trees were trained from the inputs of each binary alloy simulation to predict the formation energy. Finally, an ensemble model was trained
 \begin{equation}
 	E(\text{ABC}) = w_{\text{AB}} f(\mathbf{x}_{\text{AB}}) + w_{\text{AC}} f(\mathbf{x}_{\text{AC}}) + w_{\text{BC}} f(\mathbf{x}_{\text{BC}})
 	\label{dftensemble}
