--- a/nate-am-review/Main.tex
+++ b/nate-am-review/Main.tex
@@ -1,4 +1,4 @@
-\documentclass[twocolumn,superscriptaddress,nofootinbib]{revtex4-1}
+\documentclass[preprint,superscriptaddress,nofootinbib]{revtex4-1}
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 \usepackage{amsmath}
 \usepackage{amssymb}
