--- a/nate-am-review/SectionII/Assumptions.tex
+++ b/nate-am-review/SectionII/Assumptions.tex
@@ -13,13 +13,15 @@ It is then by making connections between individual process-structure and struct
 This understanding-through-sequential-modeling approach has the added detriment that the errors and uncertainty of each approach compound on one another, so that the final result is less accurate, more time consuming, and more expensive than the direct build-break approach to develop process-property relationships.
 Machine learning is not a complete replacement for these traditional approaches, but rather a complementary modeling approach that can accelerate or even automate that process of building connections across many degrees of freedom that span the many different individual phenomenon within AM processes.
 
-%Two assumptions are necessary when using machine learning:
-%\begin{enumerate}
-%\item \textit{The Relational Hypothesis}: A correlative relationship exists between the data input to the model and the response of the system.
-%\item \textit{The Locality Hypothesis}: Parts manufactured at similar points in the design space will have similar properties.
-%\end{enumerate}
-%
-%The first hypothesis is required for finding regression and classification functions that are physically accurate.
-%
-%The second hypothesis is used to compare data and datasets, as well as to search and optimize through regression and classification algorithms.
+Two assumptions are necessary when using machine learning:
+\begin{enumerate}
+\item \textit{The Similarity Hypothesis}: Parts manufactured at similar points in the design space will have similar properties.
+\item \textit{The Relational Hypothesis}: A correlative relationship exists between the data input to the model and the response of the system.
+\end{enumerate}
+
+The first hypothesis is used to compare data and datasets, as well as to search and optimize through regression and classification algorithms. The second hypothesis is required for finding regression and classification functions that are physically accurate.
+
+There are two types of machine learning covered in this review: unsupervised and supervised. Unsupervised learning will find trends in a dataset that are indicative of the underlying behavior. Supervised learning will learn a form of $f(\mathbf{x}) = y$. 
+
+
 
