--- a/nate-am-review/SectionII/SectionII.tex
+++ b/nate-am-review/SectionII/SectionII.tex
@@ -1,4 +1,7 @@
 \section{Phrasing Additive Manufacturing as a Machine Learning Problem}\label{phrasing}
+Data-driven modeling and machine learning have been employed to great success across several fields including materials science. While machine learning may seem foreign at first, readers will see that it can be expressed and understood in plain terms. Many of the tenets and frameworks for machine learning are based in mathematical operations which will seem familiar to the reader, but applied in new ways. 
+
+
 \input{SectionII/DesignSpace}
 \input{SectionII/DataTypes}
 \input{SectionII/Assumptions}
@@ -20,91 +23,36 @@ Search algorithms & \raggedright Genetic algorithms, Evolutionary algorithms & S
 \end{tabular}
 \end{table*}
 
-%\subsection{Design space considerations}
-%\label{subsec:DMC_design_space}
-%When attempting to optimize an AM workflow for a particular property, it is important to consider the size and complexity of the design space.
-%The size of this parameter space indicates the value of data-driven exploration.
-%While it may be most valuable to seed the design exploration by performing orthogonal experiments first, typical experimental conditions facilitate fine exploration of a small subset of the design space.
-%For example, a build plate of 44 samples is likely to be all of the same composition with each sample only differing by their part orientation on the build plate.
-%This hindrance suggests that seeding your design space from the currently available or past experiments will lead to desired output more quickly.
-%
-%\subsection{Data pipeline}
-%\label{subsec:DMC_data}
-%There are a wide variety of computational tools associated with applying ML to materials science problems.
-%As there are not many large, robust, data sources for AM, developing a data pipeline should be a top priority for ML-focused AM teams.
-%Table\ref{table:data_tools} describes some common tools and how they may be useful to AM workflows.
-%It may be useful to breakdown the active learning process into four steps: identification, collection, condensation, and analysis.
-%
-%\subsubsection{Collection}
-%When optimizing a large design space, data collection may consist of two phases: uninformed collection and informed collection.
-%Initially, when no experiments have been performed, it is most useful to pick a subset of experiments that are most dissimilar to perform first.
-%In figure\ref{fig:SL}, due to the low dimensionality of the space, the most dissimilar experiments are easy to see.
-%For high-dimensionality design spaces, unsupervised learning techniques (t-SNE, PCA) may be useful to determine the most dissimilar experiments.
-%
-%During both phases of data collection, it is useful to consider the number of format of initial data sources.
-%For AM, it is likely data will come from an instrument in the lab (i.e. XCT, mechanical testing) or previously recorded literature data.
-%When collecting data from literature tools like WebPlotDigitizer and Tabula are valuable for collecting data accurately and quickly.
-%Once data sources have been identified and some experiments have been performed it may be useful to unify disparate data into unique records.
-%For smaller projects, this could be as simple as transferring all relevant data to a csv.
-%For larger projects, users may want to consider an open data format, like JSON or SQL, to maintain robust data records.
-%
-%\subsubsection{Condensation}
-%Condensing sparse data into an "ML-ready" dataset may vary greatly between projects but there are a few considerations specific to AM.
-%If multiple team members are collaborating on a project, it may be useful to consider standardizing input and output names ("Contour laser speed" vs. "Speed of contour laser").
-%This is important for both the research as it will ensure recorded properties are not incorrectly interpreted and for machine learning as unique strings are likely interpreted as different descriptors.
-%When working with large design spaces, Python packages like Numpy and Pandas do well to provide quick feedback for the density of a dataset and can highlight sparse areas of the design space.
-%
-%During this phase, a researcher may also consider calculating features from raw data.
-%For example, the XCT may only record the size and position of pores but some pore statistics (min/max pore size) may prove useful for modeling.
-%During this step, the reseacher should apply their domain expertise to properly engineer useful features.
-%
-%\subsubsection{Analysis}
-%Once some amount of a design space has been explored and the collected data has been condensed to the relevant properties of interest, machine learning algorithms may be able to guide which experiment to preform next.
-%Python packages like sklearn, tensorflow, keras, and OpenCV contain a variety of algorithms with well documented use cases.
-%For materials specific examples of implementing a sequential learning workflow, see the learn-citrination github respository.
-%Once an informative model has been generated, experiments should be optimized in batches that allow the model to improve over many cycles.
-%At this point, informed data collection, condensation, and analysis should be repeated until the design goal is realized.
+
+\begin{table*}
+    \renewcommand{\arraystretch}{0.8}
+    \setlength{\tabcolsep}{5pt}
+    \begin{center}
+        \begin{tabular}{@{}llll@{}}
+            \toprule
+            Data source (instrument/software) & file type & processing tools & "ML-ready" output \\ \midrule
+            \hline
+            \hline
+            X-Ray tomography (Zeiss Xradia Versa) & .tiff & image featurizer & vectorized image \\
+            X-Ray tomography (TRACR) & .txt, .csv & Python (pypif, pandas, citriantion-client) & porosity statistics \\
+            X-Ray diffraction (Panalytical empyrean) & .xy & Python (pypif, csv, pandas) & XRD features (\% desired phase) \\
+            Optical microscopy (Keyence VHX-5000) & .tiff & image featurizer & vectorized image (grain size and distributions) \\
+            Uniaxial tensile testing (MTS 370) & .xy & Python (Hough transform algorithm) & real-valued mechanical properties \\
+            Composition (TOF-SIMS) & & Python (pymatgen, matminer, magpie) & composition feature vectors \\
+            Semi-structured web page & .html & Python (requests, beautifulsoup) & csv-formatted records \\
+            Semi-structured pdf (txt-based) & .pdf & tabula, AbbyyFineReader, Python (pdftotext) & csv-formatted records \\
+            ML packages & & Python (sklearn, tensorflow, keras, OpenCV) & \\
+            \hline
+            \bottomrule
+        \end{tabular}
+        \caption{Common tools and packages for preparing data for ML applications}
+        \label{table:data_tools}
+    \end{center}
+\end{table*}
 
 
-
-%\begin{table*}
-%    \renewcommand{\arraystretch}{0.8}
-%    \setlength{\tabcolsep}{5pt}
-%    \begin{center}
-%        \begin{tabular}{@{}llll@{}}
-%            \toprule
-%            Data source (instrument/software) & file type & processing tools & "ML-ready" output \\ \midrule
-%            \hline
-%            \hline
-%            X-Ray tomography (Zeiss Xradia Versa) & .tiff & image featurizer & vectorized image \\
-%            X-Ray tomography (TRACR) & .txt, .csv & Python (pypif, pandas, citriantion-client) & porosity statistics \\
-%            X-Ray diffraction (Panalytical empyrean) & .xy & Python (pypif, csv, pandas) & XRD features (\% desired phase) \\
-%            Optical microscopy (Keyence VHX-5000) & .tiff & image featurizer & vectorized image (grain size and distributions) \\
-%            Uniaxial tensile testing (MTS 370) & .xy & Python (Hough transform algorithm) & real-valued mechanical properties \\
-%            Composition (TOF-SIMS) & & Python (pymatgen, matminer, magpie) & composition feature vectors \\
-%            Semi-structured web page & .html & Python (requests, beautifulsoup) & csv-formatted records \\
-%            Semi-structured pdf (txt-based) & .pdf & tabula, AbbyyFineReader, Python (pdftotext) & csv-formatted records \\
-%            ML packages & & Python (sklearn, tensorflow, keras, OpenCV) & \\
-%            \hline
-%            \bottomrule
-%        \end{tabular}
-%        \caption{Common tools and packages for preparing data for ML applications}
-%        \label{table:data_tools}
-%    \end{center}
-%\end{table*}
-
-
-%\subsection{Preparing data for machine learning}
-%
-%For materials synthesis applications, signal from machine learning models is often limited by the amount of data and the speed at which data can be collected.
-%Many standard algorithms are suitable to correlate high-dimensional inputs and outputs in the AM design space.
-%
-%To prepare experimentally generated data for input to a machine learning model, python scripting and other automation tools are typically employed.
-%For AM synthesis optimization, data is generated at many disparate sources.
-%For example, after a build plate is printed, the porosity of each sample is determined through X-ray tomography while other mechanical properties are determined through tensile testing.
-%Data collected this way is typically resolved through a master record in which data from many instruments and synthesis steps is stored.
-%Also, storing these data in a human and machine-readable format allows for quick error checking and data maniuplation to be performed while still being accessible for machine learning.
-%Table XX highlights a variety of computational tools and Python packages and their relevance to AM synthesis optimization.
+\subsection{Preparing data for machine learning}
+Table XX highlights a variety of computational tools and Python packages and their relevance to AM synthesis optimization.
 
 
 %\begin{figure}
