--- a/nate-am-review/SectionIII/AlloyDesign.tex
+++ b/nate-am-review/SectionIII/AlloyDesign.tex
@@ -1,4 +1,10 @@
 \subsubsection{Alloy Design}
+%\begin{figure}
+%	\includegraphics[width=1\linewidth]{Images/AlloyDesign}
+%	\caption{}
+%	\label{}
+%\end{figure}
+\textbf{Should find a place to fit in a citation of Liu2006 \cite{Liu2006} -- it is a top-to-bottom ICME design study focused around mining on compositional information -- very relevant to this section. They apply partial least squares as their data-driven method.}  
 Choice of alloy impacts the physics of AM from start to finish, starting with the optics of energy sources incident on feedstock and ending with the material properties of the final part. The reflected/absorbed intensity of lasers on powder beds is determined by the powder's composition \cite{Boley2016, Trapp2017}. The density of powders, both intra- and inter-granular density, plays a role in final part density \cite{Bi2013}. Conduction modes in the melt are partially determined by the thermal properties of the alloy \cite{Martin2017}. All of this is not to mention that different alloys exhibit different grain morphologies and therefore microstructures \cite{Collins2016}. 
 
 Problems in the additive process can also be linked to composition such as vaporization of constituent elements due to rapid thermal fluxes, impacting the stoichiometry of melt pools and, ultimately, quality \cite{Brice2018}. Even traditional engineering alloys sometimes need to be altered to improve compatibility with AM. Searching for new alloys specifically for AM may also be fruitful, as unique strengthening mechanisms can arise \cite{Brice2018, Wang2017}. Designing alloys for AM -- either altering currently used alloys or starting from scratch -- requires taking into consideration the compatibility of alloys' physical properties with AM. Alloy design for AM must take into consideration general alloy properties, like melting point, to feedstock-level properties, like vaporization temperature, to bulk alloy properties, like strength. All of this information has been documented and exists in databases that can be searched. Alloy designers from AM should take advantage of these databases to search for new alloys for use in additive. 
@@ -13,7 +19,7 @@ A limiting factor in database mining is that designers are limited to properties
 
 Modeling all possible combinations of $\{\text{Ti},\text{Al}, \text{V}, \text{Zr}, \text{Cr}\}$ is possible with coarse additions of alloying elements, but undesirable. Machine learning can aid in the process to find an optimal composition without modeling all possibilities. \textit{Genetic alogrithms} (GA) can search the space of possible alloys to find the optimal dendrite arm spacing. Genetic algorithms have been one of the most-used data driven approaches in materials science over the past few decades \cite{Morris1996, Ho1998, Wolf2000, Johannesson2002, Stucke2003, Hart2005, Oganov2006}.
 
-The principle of genetic algorithms is to evaluate the \textit{fitness} of a population of candidate alloys against a \textit{fitness function}. The fitness function is a method of evaluating how well a candidate alloy meets a criteria -- in this case, dendrite arm spacing. 
+The principle of genetic algorithms is to evaluate the \textit{fitness} of a population of candidate alloys against a \textit{fitness function}. The fitness function is a method of evaluating how well a candidate alloy meets a criteria.
 
 As a thought experiment, consider using Tan's phase field/cellular automata model as a fitness function. It can be run for candidate compositions -- in this case, various amounts of $\{\text{Al}, \text{V}, \text{Zr}, \text{Cr}\}$ alloyed into Ti -- and used to evaluate the dendrite arm spacing. Once a fitness function has been identified, the next step in a genetic algorithm is to represent candidate alloys as a \textit{gene}. 
 
@@ -72,10 +78,10 @@ where in the child generation the amount of V was increased, while the amount of
 \end{table}
 where in the second generation V and Zr have been interchanged. 
 
-Selection, mutation, and crossover followed by model assessment and then further selection, mutation, and crossover continues until the design criteria is met. The intuition behind genetic algorithms is that eventually the selection process is narrowed down to alloys within a given region such that further mutation and crossover do not produce new genes. Eventually, all the `fittest` genes as determined by the model will converge to be approximately the same composition. 
+Selection, mutation, and crossover followed by model assessment and further selection, mutation, and crossover continues until the design criteria is met. The intuition behind genetic algorithms is that eventually the selection process is narrowed down to alloys within a given region such that further mutation and crossover do not produce new genes. Eventually, all the `fittest` genes as determined by the model will converge to be approximately the same composition. 
 
 Genetic algorithms have been applied to alloy design for low and high temperature structural materials \cite{Ikeda1997, Kulkarni2004}, ultra high strength steels \cite{Xu2008}, specific electronic band gaps \cite{Dudiy2006}, minimum defect structures \cite{Anijdan2006}, exploring stable ternary or higher alloys alloys \cite{Hautier2010, Johannesson2002}, and more. For a review on the application of GA's to alloy design through the early 2000s see Ref. \cite{Chakraborti2004}.
 
 Other machine learning algorithms have also been applied for classification and optimization of alloy compositions. Anijdan used a combined genetic algorithm--neural network method to find Al-Si compositions of minimum porosity \cite{Anijdan2006}. Decisions trees have been implemented for a number of different alloy optimization, such as predicting ferromagnetism \cite{Landrum2003} and the stability of Heusler compounds \cite{Oliynyk2016}. 
  
-Of course, some compositions definitely \textit{won't} be compatible with the additive process. It would be useful to identify these alloys up front or as quickly as possible. Additive can also be improved through by machine learning algorithms which suggest the best materials or properties to test. A wide range of machine learning algorithms can be implemented to guide the entire experimental design process so that an optimized property is found as quickly as possible. 
+In the search for new alloys, some compositions definitely \textit{won't} be compatible with the additive process. It would be useful to identify these alloys up front or as quickly as possible. Additive can also be improved by machine learning algorithms which suggest the best materials or properties to test. A wide range of machine learning algorithms can be implemented to guide the entire experimental design process so that an optimized property is found as quickly as possible. 
